<resources>
    <string name="app_name">Ruža</string>

    <!-- Strings related to login -->
    <string name="loginWait">Prihlasujem, prosím čakajte...</string>
    <string name="title_login">Využívajte služby Ruže</string>
    <string name="title_register">Zaregistrujte sa v Ruži</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Celé meno</string>
    <string name="prompt_date">Dátum narodenia</string>
    <string name="prompt_password">Heslo</string>
    <string name="action_log_in">Prihlásiť sa</string>
    <string name="action_log_in_short">Prihlásiť</string>
    <string name="action_sign_in">Vytvoriť nový účet</string>
    <string name="action_sign_in_short">Nový účet</string>
    <string name="error_invalid_email">Tento email je neplatný</string>
    <string name="error_invalid_password">Heslo je príliš krátke</string>
    <string name="error_incorrect_password">Nesprávne heslo</string>
    <string name="error_field_required">Vyplnte prosím</string>
    <string name="actionForgotPass">Zabudli ste heslo?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="open">Otvoriť</string>
    <string name="close">Zavrieť</string>
    <string name="my_rose">Moja ruža</string>
    <string name="about">O aplikácií</string>

    <string name="secret">Tajomstvo mesiaca</string>
    <string name="add_intent">Pridaj úmysel</string>
    <string name="todays_intent">Úmysel na dnes</string>

    <string name="logout">Odhlásiť sa</string>
    <string name="my_profile">Môj profil</string>
    <string name="title_activity_dra">dra</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

</resources>
