<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    tools:context="peter.ruza.ProfileActivity">


    <RelativeLayout
        android:id="@+id/profile0"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <LinearLayout
            android:id="@+id/profile1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"

            >
        <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:icon="@mipmap/ic_person_white_24dp"
                android:layout_height="wrap_content"
                android:text="@string/secret"/>
        <TextView
                android:id="@+id/tajomstvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:layout_marginTop="15px"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/profile2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Logout"
            android:layout_below="@+id/textViewUserEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp" />

        <LinearLayout
            android:id="@+id/profile2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/profile1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@mipmap/ic_person_white_24dp"
                android:text="@string/todays_intent"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/umysel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15px"
                android:text="TextView" />

            <TextView
                android:id="@+id/pridaj_umysel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/add_intent" />

        </LinearLayout>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        style="@style/Widget.Design.NavigationView"
        >
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>